<resources>
    <string name="app_name">Aurora</string>
    <string name="test">Test</string>
    <string name="click_me">Click me!</string>
    <string name="_0">0</string>
    <string name="input_text">Input text</string>
    <string name="change">Change</string>
    <string name="input">Введите текст</string>
    <string name="galaxy">Galaxy</string>
    <string name="todo">TODO</string>
    <string name="breaks">Сломать</string>
    <string name="_1">1</string>
    <string name="skip">Пропустить</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="sleep">сон</string>
    <string name="ru_galaxy">Галактика</string>
    <string name="iron">Утюг</string>
    <string name="correct">Верно!</string>
    <string name="next">Продолжить</string>
</resources>
