<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/galaxy"
        android:textColor="#202027"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:text="Galaxy" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewVariantNumberStyle"
                android:text="@string/_1" />

            <TextView
                style="@style/TextViewVariantStyle"
                android:text="@string/breaks" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewVariantNumberStyle"
                android:text="@string/_2" />

            <TextView
                style="@style/TextViewVariantStyle"
                android:text="@string/sleep" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNumber3"
                style="@style/TextViewVariantNumberStyle"
                android:text="@string/_3" />

            <TextView
                android:id="@+id/textViewVariant3"
                style="@style/TextViewVariantStyle"
                android:text="@string/ru_galaxy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewVariantNumberStyle"
                android:text="@string/_4" />

            <TextView
                style="@style/TextViewVariantStyle"
                android:text="@string/iron" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSkip"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#2574FF"
        android:visibility="visible"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="#0EAD69"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_height="136dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_good"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/correct"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@id/imageView2" />

        <android.widget.Button
            android:layout_width="320dp"
            android:layout_height="58dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/shape_rounded_button"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/next"
            android:textColor="#0EAD69"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>